@@ -16,7 +16,6 @@
 
 	.highlight-head{
 		line-height: 1.3em;
-		color: @highlightHeadingColor;
 		font-size: @h1Size * 1.3;
 	}
 
